// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`lib --standalone should generate a library with a standalone component and have it flat 1`] = `"export * from './lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component and have it flat 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  templateUrl: './my-lib.html',
  styleUrl: './my-lib.css'
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component and have it flat 3`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a standalone component and have it flat with routing setup 1`] = `
"export * from './lib/lib.routes';

export * from './lib/my-lib';"
`;

exports[`lib --standalone should generate a library with a standalone component and have it flat with routing setup 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  templateUrl: './my-lib.html',
  styleUrl: './my-lib.css'
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component and have it flat with routing setup 3`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a standalone component and have it flat with routing setup 4`] = `
"import { Route } from '@angular/router';
import { MyLib } from './my-lib';

export const myLibRoutes: Route[] = [
  { path: '', component: MyLib }
];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point 1`] = `"export * from './lib/my-lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component as entry point 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  templateUrl: './my-lib.html',
  styleUrl: './my-lib.css'
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point 3`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point and set up view encapsulation and change detection 1`] = `"export * from './lib/my-lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component as entry point and set up view encapsulation and change detection 2`] = `
"import { ChangeDetectionStrategy, Component, ViewEncapsulation } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  template: \`<p>MyLib works!</p>\`,
  styles: \`\`,
  encapsulation: ViewEncapsulation.ShadowDom,
  changeDetection: ChangeDetectionStrategy.OnPush
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point and skip tests 1`] = `"export * from './lib/my-lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component as entry point and skip tests 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  template: \`<p>MyLib works!</p>\`,
  styles: \`\`
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point following SFC pattern 1`] = `"export * from './lib/my-lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component as entry point following SFC pattern 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  template: \`<p>MyLib works!</p>\`,
  styles: \`\`
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point following SFC pattern 3`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup 1`] = `
"export * from './lib/lib.routes';

export * from './lib/my-lib/my-lib';"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup 2`] = `
"import { Route } from '@angular/router';
import { MyLib } from './my-lib/my-lib';

export const myLibRoutes: Route[] = [
  { path: '', component: MyLib }
];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup 3`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  templateUrl: './my-lib.html',
  styleUrl: './my-lib.css'
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup 4`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to parent module as a lazy child 1`] = `
"export * from './lib/lib.routes';

export * from './lib/my-lib/my-lib';"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to parent module as a lazy child 2`] = `
"import { Route } from '@angular/router';
import { MyLib } from './my-lib/my-lib';

export const myLibRoutes: Route[] = [
  { path: '', component: MyLib }
];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to parent module as a lazy child 3`] = `
"import { Route } from '@angular/router';

export const appRoutes: Route[] = [
    { path: 'my-lib', loadChildren: () => import('@proj/my-lib').then(m => m.myLibRoutes) },];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to parent module as direct child 1`] = `
"export * from './lib/lib.routes';

export * from './lib/my-lib/my-lib';"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to parent module as direct child 2`] = `
"import { Route } from '@angular/router';
import { MyLib } from './my-lib/my-lib';

export const myLibRoutes: Route[] = [
  { path: '', component: MyLib }
];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to parent module as direct child 3`] = `
"import { Route } from '@angular/router';
import { myLibRoutes } from '@proj/my-lib';

export const appRoutes: Route[] = [
    { path: 'my-lib', children: myLibRoutes },];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to standalone parent routes as a lazy child 1`] = `
"import { Route } from '@angular/router';
import { MyLib } from './my-lib/my-lib';

export const myLibRoutes: Route[] = [
    { path: 'second', loadChildren: () => import('@proj/second').then(m => m.secondRoutes) },
  { path: '', component: MyLib }
];
"
`;

exports[`lib --standalone should generate a library with a standalone component as entry point with routing setup and attach it to standalone parent routes as direct child 1`] = `
"import { Route } from '@angular/router';
import { MyLib } from './my-lib/my-lib';
import { secondRoutes } from '@proj/second';

export const myLibRoutes: Route[] = [
    { path: 'second', children: secondRoutes },
  { path: '', component: MyLib }
];
"
`;

exports[`lib --standalone should generate a library with a standalone component in a directory 1`] = `"export * from './lib/my-lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component in a directory 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  templateUrl: './my-lib.html',
  styleUrl: './my-lib.css'
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component in a directory 3`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a standalone component in a directory with a simple name 1`] = `"export * from './lib/my-lib/my-lib';"`;

exports[`lib --standalone should generate a library with a standalone component in a directory with a simple name 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-my-lib',
  imports: [CommonModule],
  templateUrl: './my-lib.html',
  styleUrl: './my-lib.css'
})
export class MyLib {}
"
`;

exports[`lib --standalone should generate a library with a standalone component in a directory with a simple name 3`] = `
"import { ComponentFixture, TestBed } from '@angular/core/testing';
import { MyLib } from './my-lib';

describe('MyLib', () => {
  let component: MyLib;
  let fixture: ComponentFixture<MyLib>;

  beforeEach(async () => {
    await TestBed.configureTestingModule({
      imports: [MyLib]
    }).compileComponents();

    fixture = TestBed.createComponent(MyLib);
    component = fixture.componentInstance;
    fixture.detectChanges();
  });

  it('should create', () => {
    expect(component).toBeTruthy();
  });
});
"
`;

exports[`lib --standalone should generate a library with a valid selector for the standalone component when library name has a slash 1`] = `"export * from './lib/auth/common/auth/common';"`;

exports[`lib --standalone should generate a library with a valid selector for the standalone component when library name has a slash 2`] = `
"import { Component } from '@angular/core';
import { CommonModule } from '@angular/common';

@Component({
  selector: 'lib-auth-common',
  imports: [CommonModule],
  templateUrl: './common.html',
  styleUrl: './common.css'
})
export class AuthCommon {}
"
`;

exports[`lib router lazy should add RouterModule.forChild 1`] = `
"import { NgModule } from '@angular/core';
import { CommonModule } from '@angular/common';
import { RouterModule } from '@angular/router';
import { myLibRoutes } from './lib.routes';

@NgModule({
  imports: [CommonModule, RouterModule.forChild(myLibRoutes)],
})
export class MyLibModule {}
"
`;

exports[`lib router lazy should add RouterModule.forChild 2`] = `
"import { NgModule } from '@angular/core';
import { CommonModule } from '@angular/common';
import { RouterModule } from '@angular/router';
import { myLib2Routes } from './lib.routes';

@NgModule({
  imports: [CommonModule, RouterModule.forChild(myLib2Routes)],
})
export class MyLib2Module {}
"
`;

exports[`lib router lazy should update the parent module 1`] = `
"import { NgModule } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { RouterModule } from '@angular/router';
import { App } from './app';
@NgModule({
  imports: [
    BrowserModule,
    RouterModule.forRoot([
      {
        path: 'my-lib',
        loadChildren: () => import('@proj/my-lib').then((m) => m.MyLibModule),
      },
    ]),
  ],
  declarations: [App],
  bootstrap: [App],
})
export class AppModule {}
"
`;

exports[`lib router lazy should update the parent module 3`] = `
"import { NgModule } from '@angular/core';
import { BrowserModule } from '@angular/platform-browser';
import { RouterModule } from '@angular/router';
import { App } from './app';
@NgModule({
  imports: [
    BrowserModule,
    RouterModule.forRoot([
      {
        path: 'my-lib',
        loadChildren: () => import('@proj/my-lib').then((m) => m.MyLibModule),
      },
      {
        path: 'my-lib2',
        loadChildren: () => import('@proj/my-lib2').then((m) => m.MyLib2Module),
      },
      {
        path: 'my-lib3',
        loadChildren: () => import('@proj/my-lib3').then((m) => m.MyLib3Module),
      },
    ]),
  ],
  declarations: [App],
  bootstrap: [App],
})
export class AppModule {}
"
`;

exports[`lib router lazy should update the parent module even if the route is declared outside the .forRoot(...) 1`] = `
"
          import { NgModule } from '@angular/core';
          import { BrowserModule } from '@angular/platform-browser';
          import { RouterModule } from '@angular/router';
          import { App } from './app';

          const routes = [{ path: 'my-lib', loadChildren: () => import('@proj/my-lib').then(m => m.MyLibModule) }];

          @NgModule({
            imports: [BrowserModule, RouterModule.forRoot(routes)],
            declarations: [App],
            bootstrap: [App]
          })
          export class AppModule {}
        "
`;
